# Internal2017

./: #imageplayer.html  #test raw world convertion.cpp  #tester.cpp  .gitignore  2017_inno.h  BalanceCtrl.cpp  BalanceCtrl.h  Button.pde  CMakeLists.txt  ChangeConstant.pde  Complementary_Filter.cpp  Complementary_Filter.h  Data.pde  DisplayImage.pde  FBalanceCtrl.h  Filter.h  FindEdge.h  First good  Function.h  ImageList.pde  InternalProgram.cpp  Internal_Program.txt  MCU_distortion_solve.cpp  MPU9250.cpp  MPU9250.h  MadgwickAHRS.cpp  MadgwickAHRS.h  MakeConfig.inc  Makefile  PID.h  PlotGraph.pde  README.md  ReadMe.txt  RealTimeImage.pde  ScrollBar.pde  Second Good  Slider.pde  SmartcarProcessing.pde  SpeedCtrl.cpp  SpeedCtrl.h  (+52 more)
Chasing/: MakeConfig.inc  Makefile
Chasing/inc/: debug_console.h  img.h
Chasing/src/: main.cpp
Creative_group_car_board_1/: board 1 spec.txt  car board ver1.SchDoc  car ver1.PrjPCB.PcbDoc
Just_For_Fun/: snake_game_on_smart_car.cpp
SampleCodes/: CamToLCD.cpp  Filter.cpp  SmartCar.cpp
SmartCar/: .cproject  MakeConfig.inc  main.cpp
SmartCar/inc/: camera.h  car.h  global.h  gui.h  ir_ultrasound.h  main.h  smart_car.h  snake_game.h  util.h
SmartCar/src/: camera.cpp  car.cpp  car_manager.cpp  global.cpp  gui.cpp  ir_ultrasound.cpp  main.cpp  smart_car.cpp  snake_game.cpp  util.cpp
SmartCar/src/util/: mpc.cpp
android_debug_app/airship_remote/: keystore.jks
android_debug_app/airship_remote/app/: app-release.apk  build.gradle
android_debug_app/airship_remote/app/src/androidTest/java/com/example/leechunhei/airship_remote/: ExampleInstrumentedTest.java
android_debug_app/airship_remote/app/src/main/: AndroidManifest.xml
android_debug_app/airship_remote/app/src/main/java/com/example/leechunhei/airship_remote/: BluetoothChatService.java  Constants.java  MainActivity.java  SmartCarRemote.java  VerticalSeekBar.java  airshipControl.java  remote.java  select.java  smartcarbluetoothpair.java
android_debug_app/airship_remote/app/src/main/java/org/jinkia/jk_rockerview/: MainActivity.java  RockerView.java
android_debug_app/airship_remote/app/src/main/res/layout/: activity_airship_control.xml  activity_main.xml  activity_remote.xml  activity_select.xml  activity_smart_car_remote.xml  activity_smartcarbluetoothpair.xml
android_debug_app/airship_remote/app/src/main/res/values/: attrs.xml  strings.xml
android_debug_app/airship_remote/app/src/test/java/com/example/leechunhei/airship_remote/: ExampleUnitTest.java
beacon_detect/: detect_beacon_02.txt  detect_beacon_04.txt  detect_beacon_05_WithComments.cpp  detect_beacon_05_demo.txt
debug console/: DebugConsole.cpp  DebugConsole.h  MCU_DebugConsole  MCU_debug_console_V2.h  console_playgroung.cpp  main.cpp  readme.md
debug console/V3/: debug_console.cpp  debug_console.h
debug console/V4/: debug_console.cpp  debug_console.h
debug console/inc/: debug_console.h
debug console/src/: debug_console.cpp
distortion solver/: main.cpp
edge find/: Adding_Feature_Extraction.cpp  basic_layer_style_edge_find.cpp  buged.cpp  edge_find_follow_edge.cpp  find_edge_by_following_edge_unstable.cpp  fine_left_edge_follow_edge_stable.cpp  main - 複製.cpp  main.cpp  new.cpp
feature_extraction/: 20042017.cpp  20170426.cpp  adding.cpp  backup_20170419.cpp  feature_extraction.cpp  feature_extraction_LCD_disabled  solve_crossing.cpp  temparory.cpp  with_corner.cpp
inc/: demo.h  include_all.h  main.h  tuning_constants.h  unit_tests.h
inc/algorithm/: area_method.h  centerline_method.h
inc/assignments/: button_toggle_led.h  camera_to_lcd.h
inc/util/: distortion_calibrator.h  distortion_calibrator.tcc  encoder_power_unit.h  encoder_power_unit_debug.h  encoder_proportional_controller.h  encoder_proportional_controller_debug.h  encoder_translation_unit.h  unit_tests.h  util.h  util.tcc
project1/: Makefile
project1/src/: main.cpp
src/: Edge_finding.cpp  bluetooth.cpp  button_toggle_led.cpp  demo.cpp  main.cpp  unit_tests.cpp
src/algorithm/: area_method.cpp  centerline_method.cpp
src/alternate_algorithms/: area_method.cpp
src/assignments/: button_toggle_led.cpp  camera_to_lcd.cpp
src/util/: distortion_calibrator.cpp  encoder_power_unit.cpp  encoder_proportional_controller.cpp  encoder_translation_unit.cpp  unit_tests.cpp  util.cpp
testing/: tina.pages
tortion solver/: main.cpp
